[gd_scene load_steps=18 format=3 uid="uid://bmuovjwmnqp2m"]

[ext_resource type="Script" path="res://src/levels/game_intro/game_intro_controller.gd" id="1_i67oj"]
[ext_resource type="Texture2D" uid="uid://c0vg3t82fq0gg" path="res://assets/bees/lgbtqiap_ss.png" id="1_opvpq"]
[ext_resource type="PackedScene" uid="uid://dfxjscj8h2v5g" path="res://src/levels/game_intro/animated_text.tscn" id="2_6p5ou"]
[ext_resource type="Theme" uid="uid://bheuenbl3wl31" path="res://assets/theme/main_theme.tres" id="2_jyawq"]
[ext_resource type="Texture2D" uid="uid://cam674ywlj8nv" path="res://assets/intro/blue_skye.png" id="2_t4t4n"]
[ext_resource type="Texture2D" uid="uid://b8wjghc46es0j" path="res://assets/intro/sun.png" id="3_3vvfe"]
[ext_resource type="PackedScene" uid="uid://dec0l5uxadafl" path="res://src/user_interface/play_button.tscn" id="4_nh1o2"]

[sub_resource type="Animation" id="Animation_ieln1"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.937255, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_kuo5g"]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_klkfl"]
_data = {
"RESET": SubResource("Animation_ieln1"),
"fade_out": SubResource("Animation_kuo5g")
}

[sub_resource type="Animation" id="Animation_p05yo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(950, 436)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(950, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(436, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.340339, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fb223"]
resource_name = "moviment"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(950, -0.25, 0, 0.25, 0, 554, -0.25, 0, 0.25, 0, 118, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(436, -0.25, 0, 0.25, 0, 352, -0.25, 0, 0.25, 0, 352, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -0.340339, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_hm34y"]
resource_name = "pulse"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(118, 352), Vector2(118, 340), Vector2(118, 352)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_si145"]
_data = {
"RESET": SubResource("Animation_p05yo"),
"moviment": SubResource("Animation_fb223"),
"pulse": SubResource("Animation_hm34y")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yxstm"]
bg_color = Color(0.94902, 0.635294, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hq444"]
bg_color = Color(0.94902, 0.635294, 0.0980392, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_1lin3"]
animations = [{
"frames": [],
"loop": true,
"name": &"rainbow",
"speed": 5.0
}]

[node name="game_intro" type="Node2D"]
position = Vector2(18, 20)
script = ExtResource("1_i67oj")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -20.0
offset_right = 1134.0
offset_bottom = 628.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_t4t4n")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 0.937255)

[node name="RectAnimationPlayer" type="AnimationPlayer" parent="Control/ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_klkfl")
}

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 848.0
offset_top = 52.0
offset_right = 1023.0
offset_bottom = 184.0
texture = ExtResource("3_3vvfe")

[node name="AnimatedText" parent="." instance=ExtResource("2_6p5ou")]
offset_left = 142.0
offset_top = 184.0
offset_right = 955.0
offset_bottom = 299.0
theme_override_colors/default_color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[node name="Bee" type="Sprite2D" parent="."]
position = Vector2(118, 352)
rotation = -0.340339
scale = Vector2(0.763158, 0.763158)
texture = ExtResource("1_opvpq")
flip_h = true
hframes = 5

[node name="BeeAnimationPlayer" type="AnimationPlayer" parent="Bee"]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_si145")
}

[node name="StartTextTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true
autostart = true

[node name="PlayButton" parent="." instance=ExtResource("4_nh1o2")]
offset_left = 926.0
offset_top = 520.0
offset_right = 1086.0
offset_bottom = 580.0
theme = ExtResource("2_jyawq")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
theme_override_styles/hover = SubResource("StyleBoxFlat_yxstm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hq444")
text = "Next"
next_scene_path = "res://src/levels/main_screen.tscn"

[node name="RainbowAnimatedSprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_1lin3")
animation = &"rainbow"

[connection signal="animation_finished" from="Control/ColorRect/RectAnimationPlayer" to="." method="_on_rect_animation_player_animation_finished"]
[connection signal="animation_finished" from="Bee/BeeAnimationPlayer" to="." method="_on_bee_animation_player_animation_finished"]
[connection signal="timeout" from="StartTextTimer" to="." method="_on_start_text_timer_timeout"]
